# vk_wall_parser

./: .gitignore  README.md  config_example.json  main.py  pyproject.toml  requirements.txt  requitements.txt  ruff.toml  sundays.py  test.py
src/: main.py  utils.py
