[tool.poetry]
name = "vk-wall-parser"
version = "0.1.0"
description = ""
authors = ["yakovlevs01 <yakovlevs01@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
vk-api = "^11.9.9"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"

[tool.ruff]
fix = true
#unsafe-fixes = true
line-length = 120
extend-include = ["*.ipynb"]
select = ["ALL"]
ignore = ["EM", "FBT", "TRY003", "S101", "D1", "FA", "ANN101"]
pydocstyle.convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
